# tactic11

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  PILOT.md  PILOT_ENGINES.md  PILOT_PITCH.md  PROMPT_BACKEND_LOAD_THRESHOLD.md  PROMPT_FAZ5_BACKLOG.md  PROMPT_FRONTEND_FAZ2.md  PROMPT_FRONTEND_FAZ3.md  PROMPT_FRONTEND_FAZ4.md  README.md  ROADMAP.md  alembic.ini  demo_statsbomb_report.json  docker-compose.yml  full_season_audit.json  full_season_audit.md  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
alembic/: README.md  env.py
docs/: API_ENDPOINTS.md  FOOTBALL_GLOSSARY.md  NIGHT_LOG_2026-06-07.md  PILOT_PITCH.md  PREDICT_BACKTEST.md  SCREEN_INVENTORY.md
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
models/: .gitignore  README.md
scripts/: README.md  api_football_smoke.py  backfill_appearances.py  backup_db.sh  calibration_report.py  demo.py  demo_multi_match_trend.py  demo_real_statsbomb.py  dev_api.py  dev_seed.py  e2e_smoke_tactical.py  extras_engine_audit.py  full_season_audit.py  generate_fixtures.py  generate_tracking_fixture.py  ingest_statsbomb_events.py  live_decision_replay.py  pilot_demo.py  predict_backtest.py  restore_db.sh  run_job.py  scheduler_daemon.py  seed_demo.py  smoke_decision_e2e.py  snapshot_diff.py  sync_league.py
templates/: pilot_email_tr.md
tests/: conftest.py  test_agent_game_plan.py  test_agent_halftime_analysis.py  test_agent_live_decision_digest.py  test_agent_player_feedback.py  test_agents_foundation.py  test_ai_commentator.py  test_alert_dispatch.py  test_api_admin.py  test_api_analysis.py  test_api_analysis_engines.py  test_api_auth.py  test_api_decisions.py  test_api_faz7.py  test_api_faz8.py  (+213 more)
(+710 files in other folders)
